# netbox-webhook

./: README.md  pyproject.toml
netbox_webhook/: models.py  netbox.py
tests/: test_webhook.py  test_webhook_api.py
tests/data/: README.md
